feat: Refactor AuthService and TaskService for improved readability and maintainability
- Enhanced AuthService with clearer method structures and added documentation.
- Streamlined user registration and login processes, ensuring better error handling.
- Refactored TaskService to improve task creation, updating, and retrieval logic.
- Introduced utility methods for common operations in TaskService.
- Added package-info.java files for better package documentation across the application.
- Improved exception handling and access control checks in TaskService methods.